Options to ignore certain worlds and mobs, compatibility with older API